--- a/my_files/README
+++ b/my_files/README
@@ -1,1 +1,3 @@
-My_files
+my_files contains various functional parsers for Q-Chem input file creation and output information extraction.
+All the .yaml files present here are the templates for FireWorks jobs.
+qcfw - This directory hosts excited state parsers for Q-Chem.
